Disable PORTALLOCATOR_DISABLE_COSTLY_NETWORKS

The PORTALLOCATOR_DISABLE_COSTLY_NETWORKS flag isn't reliable on mobile
network and may remove networks that shouldn't be removed. Given that we
never had this flag set on the old app and we hadn't got any complain so
far, we may just disable this flag for now.

Bug: 829117
Change-Id: Ic33cc19998ce259c60227e020e1ca1264e4c7fab
Reviewed-on: https://chromium-review.googlesource.com/996613
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548316}
Former-commit-id: 254ce1becd1721b163a8014cc9a9e5b6893a57b6