remoting/protocol/port_allocator.cc
@@ -54,11 +54,14 @@ PortAllocator::PortAllocator(
   // performance when combined with TCP-based transport, so we have to disable
   // TCP ports. ENABLE_SHARED_UFRAG flag is specified so that the same username
   // fragment is shared between all candidates.
+  // TODO(crbug.com/488760): Ideally we want to add
+  // PORTALLOCATOR_DISABLE_COSTLY_NETWORKS, but this is unreliable on iOS and
+  // may end up removing mobile networks when no WiFi is available. We may want
+  // to add this flag only if there is WiFi interface.
   int flags = cricket::PORTALLOCATOR_DISABLE_TCP |
               cricket::PORTALLOCATOR_ENABLE_SHARED_UFRAG |
               cricket::PORTALLOCATOR_ENABLE_IPV6 |
-              cricket::PORTALLOCATOR_ENABLE_IPV6_ON_WIFI |
-              cricket::PORTALLOCATOR_DISABLE_COSTLY_NETWORKS;
+              cricket::PORTALLOCATOR_ENABLE_IPV6_ON_WIFI;
 
   NetworkSettings network_settings = transport_context_->network_settings();
 
